# textnet

./: --extra-params={'max_tokens': 64000, 'extra_headers': {'anthropic-beta': 'tools-2024-04-04'}}  .aider.conf.yml  .aider.model.settings.yml  .dockerignore  .gitignore  CONVENTIONS.md  Dockerfile  GOALS.md  LICENSE.md  PROJECT_STRUCTURE.md  README.md  Tiltfile  VIBE.md  conftest.py  manifest.yaml  package-lock.json  pyproject.toml  pyrightconfig.json  tmp_asean_examples.txt
slides/: CNAME  package-lock.json  package.json  slides.md  slidev.config.js
tests/: deploy.feature  test_deploy.py
