[project]
name = "deploy"
version = "1.0.0"
requires-python = ">=3.12"

dependencies = ["poethepoet", "pytest-bdd", "pyinfra"]

[tool.poe.tasks.dev]
cmd = "pytest -xsm 'dev and not skip' --tb=short -s tests/"

[tool.poe.tasks.ci]
cmd = "pytest -x --tb=long -s -v -m 'ci and not skip' tests/"

[tool.poe.tasks.ai]
envfile = ".env.aider"
cmd = "aider --watch-files --model gem"

[tool.pytest.ini_options]
markers = [
  "dev",
  "ci",
  "prod"
]

filterwarnings = [
  "ignore::DeprecationWarning"
]

