[project]
name = "deploy"
version = "1.0.0"
requires-python = ">=3.12"

dependencies = ["poethepoet", "pytest-bdd", "pyinfra"]

[tool.poe.tasks.dev]
cmd = "pytest -xsm 'dev and not skip' --tb=short tests/"

[tool.poe.tasks.ci]
cmd = "pytest -xsvm 'ci and not skip' --tb=long tests/"

[tool.poe.tasks.ai]
envfile = ".env.aider"
cmd = "aider --watch-files --model sonnet"

[tool.pytest.ini_options]
markers = [
  "dev",
  "ci",
  "prod"
]

filterwarnings = [
  "ignore::DeprecationWarning"
]

